--- a/1.FRIST WEB SITE/my_webpage.html
+++ b/1.FRIST WEB SITE/my_webpage.html
@@ -27,7 +27,8 @@
                 <div id="signin" class="one">
                     <a href="index2.html">Sign In</a>
                 </div>
-                <div id="game" class="one"><a href="game.html">Let's play a game!</a></div>
+                <div id="game" class="one"><a href="game.html">Let's play Math game!</a></div>
+                <div id="gamefruit" class="one"><a href="fruitgame.html">Let's play Fruit game!</a></div>
             </div>
 
             <div id="menu">
