debug fruit hide bug

--- a/1.FRIST WEB SITE/fruitgame.html
+++ b/1.FRIST WEB SITE/fruitgame.html
@@ -13,10 +13,11 @@
                 <img id="fruit1" class="fruit" />
             </div>
             <div id="instruction">Catch Fruits!</div>
+            <div id="gameover"></div>
 
             <div id="startreset">Start Game</div>
         </div>
         <script src="jquery.min.js"></script>
-        <script src="fruitgamescript.js"></script>
+        <script src="jquery-ui.min.js"></script><script src="fruitgamescript.js"></script>
     </body>
 </html>
