--- a/2.Second Web Page/passtime.html
+++ b/2.Second Web Page/passtime.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Passtime</title>
+        <title>Pastime</title>
     </head>
     <body>
         <div>
-            <h3>Passtime</h3>
+            <h3>Pastime</h3>
             <ul>
                 <li>Music</li>
                 <li>Art</li>
