--- a/2.Second Web Page/secweb.html
+++ b/2.Second Web Page/secweb.html
@@ -7,6 +7,10 @@
         <title>NILOUFAR FEYZ</title>
         <!--<link rel="stylesheet" href="style.css" />-->
         <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+        @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
     </head>
     <body id="fuck" class="bg-black">
         <div id="container" class="bg-black">
@@ -304,6 +308,13 @@
                     class="footer d-flex justify-content-center fw-medium fs-6 fst-italic"
                     style="height: 45px; background: linear-gradient(#363479, #554ff6); color: #cfcbf0">
                     <p>Email: nilouton@gmail.com</p>
+                    <br />
+                    <p><i class="bi bi-instagram p-2"></i></p>
+
+                    <p><i class="bi bi-telegram p-1"></i></p>
+                    <p><i class="bi bi-whatsapp p-1"></i></p>
+                    <p><i class="bi bi-youtube p-1"></i></p>
+                    <p><i class="bi bi-linkedin p-1"></i></p>
                 </div>
             </footer>
         </div>
